--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,10 +1,9 @@
 // Add your dependencies here
 
 dependencies {
-    compile 'net.industrial-craft:industrialcraft-2:2.2.828-experimental:dev' 
-    compile 'com.github.GTNewHorizons:OpenComputers:1.7.5.21-GTNH:api'
-    compile 'curse.maven:cofh-core-69162:2388751'
+    api 'net.industrial-craft:industrialcraft-2:2.2.828-experimental:dev'
+    api 'com.github.GTNewHorizons:OpenComputers:1.10.5-GTNH:dev'
+    compileOnly 'curse.maven:cofh-core-69162:2388751'
     compileOnly('curse.maven:mystcraft-224599:2417044') {transitive = false}
     compileOnly('curse.maven:computercraft-67504:2269339') {transitive = false}
-    runtimeOnly 'com.github.GTNewHorizons:OpenComputers:1.7.5.21-GTNH:dev'
 }
